# PatchWise

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
patchwise/: __init__.py  default_config.yaml  logger_setup.py  main.py
patchwise/patch_review/: __init__.py  decorators.py  kernel_tree.py  patch_review.py
patchwise/patch_review/ai_review/: ai_code_review.py  ai_review.py  llm_commit_audit.py
patchwise/patch_review/static_analysis/: checkpatch.py  coccicheck.py  dt_check.py  dtbs_check.py  sparse.py  static_analysis.py
patchwise/utils/: config.py
